Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-3081

ATS doesn't send FIN flag to indicate data complete to the client in some cases..

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 5.0.1
    • 5.2.0
    • SPDY

    Description

      FetchSM cleans itself up without sending a TS_FETCH_EVENT_EXT_BODY_DONE event when there's no more data available to read in the ioBufferReader.

      Attachments

        1. TS-3081.diff
          0.7 kB
          Sudheer Vinukonda

        Activity

          People

            sudheerv Sudheer Vinukonda
            sudheerv Sudheer Vinukonda
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: