[TS-3081] - FetchSM cleans itself up without sending a TS_FETCH_EVENT_EXT_BODY_DONE event when there's no more data available to read in the ioBufferReader.